--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -1,3 +1,15 @@
+@TechReport{cortexM4,
+author = {ARM},
+title = {{Cortex®-M4 Processor}},
+year = {2009},
+}
+
+@TechReport{cortexM7,
+author = {ARM},
+title = {{ARM® Cortex®-M7 Processor}},
+year = {2014},
+}
+
 @Misc{hddHack,
 author = {Spritesmods},
 title = {Hard disk hacking - {H}ooking up {JTAG}},
