--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -1,3 +1,11 @@
+@Misc{crossCompilation,
+author = {Free Software Foundation},
+title = {Cross-{C}ompilation},
+year = {2014},
+month = {Decembrie},
+note = {\url{https://www.gnu.org/savannah-checkouts/gnu/automake/manual/html_node/Cross_002dCompilation.html}, Accesat februarie 2017},
+}
+
 @TechReport{cortexM4,
 author = {ARM},
 title = {{Cortex®-M4 Processor}},
